# 2D-Platformer-Game

./: .gitignore  2D-Plateformer-Game.sln  2D-Plateformer-Game.vcxproj  2D-Plateformer-Game.vcxproj.filters  2D-Plateformer-Nigga.vcxproj  2D-Plateformer-Nigga.vcxproj.filters  2D-Plateformer.sln  Button.cpp  Button.hpp  CMakeLists.txt  Controller.hpp  GUI.cpp  GUI.hpp  Hitbox.cpp  Hitbox.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  README.md  main.cpp  physics.hpp
assets/: Level_Color_Codes.txt
docs/: index.html  styles.css
src/: Button.cpp  Button.hpp  Controller.hpp  GUI.cpp  Hitbox.hpp  Level.cpp  Player.cpp  main.cpp
x64/Debug/: 2D-Plateformer-Game.exe.recipe  2D-Plateformer-Nigga.exe.recipe  2D-Plateformer-Nigga.vcxproj.FileListAbsolute.txt  2D-Plateformer.exe.recipe  2D-Platformer-Game.exe.recipe  vc143.idb
x64/Debug/2D-Plate.6afbe1ec.tlog/: 2D-Plateformer-Game.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/2D-Plate.8ee1a1c9.tlog/: 2D-Plateformer-Nigga.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/2D-Plateformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/2D-Platf.6afbe1ec.tlog/: 2D-Platformer-Game.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/2D-Platf.ACC3EE80.tlog/: CL.command.1.tlog
